; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/leds/extr_leds-clevo-mail.c_clevo_mail_led_set.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/leds/extr_leds-clevo-mail.c_clevo_mail_led_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.led_classdev = type { i32 }

@LED_OFF = common dso_local global i32 0, align 4
@CLEVO_MAIL_LED_OFF = common dso_local global i32 0, align 4
@LED_HALF = common dso_local global i32 0, align 4
@CLEVO_MAIL_LED_BLINK_0_5HZ = common dso_local global i32 0, align 4
@CLEVO_MAIL_LED_BLINK_1HZ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.led_classdev*, i32)* @clevo_mail_led_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @clevo_mail_led_set(%struct.led_classdev* %0, i32 %1) #0 {
  %3 = alloca %struct.led_classdev*, align 8
  %4 = alloca i32, align 4
  store %struct.led_classdev* %0, %struct.led_classdev** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = call i32 (...) @i8042_lock_chip()
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @LED_OFF, align 4
  %8 = icmp eq i32 %6, %7
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load i32, i32* @CLEVO_MAIL_LED_OFF, align 4
  %11 = call i32 @i8042_command(i32* null, i32 %10)
  br label %23

12:                                               ; preds = %2
  %13 = load i32, i32* %4, align 4
  %14 = load i32, i32* @LED_HALF, align 4
  %15 = icmp ule i32 %13, %14
  br i1 %15, label %16, label %19

16:                                               ; preds = %12
  %17 = load i32, i32* @CLEVO_MAIL_LED_BLINK_0_5HZ, align 4
  %18 = call i32 @i8042_command(i32* null, i32 %17)
  br label %22

19:                                               ; preds = %12
  %20 = load i32, i32* @CLEVO_MAIL_LED_BLINK_1HZ, align 4
  %21 = call i32 @i8042_command(i32* null, i32 %20)
  br label %22

22:                                               ; preds = %19, %16
  br label %23

23:                                               ; preds = %22, %9
  %24 = call i32 (...) @i8042_unlock_chip()
  ret void
}

declare dso_local i32 @i8042_lock_chip(...) #1

declare dso_local i32 @i8042_command(i32*, i32) #1

declare dso_local i32 @i8042_unlock_chip(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
